Admin: bootstrap theme

--- a/app/views/admin/contest.scala.html
+++ b/app/views/admin/contest.scala.html
@@ -2,7 +2,7 @@
 
 @main("Contest - Admin") {
 
-<h1>Contest: @contest.name</h1>
+<h1 class="page-header">Contest: @contest.name</h1>
 
 <p>@map(0)</p>
 <p>@map(1)</p>
