--- a/app/views/admin/lobby.scala.html
+++ b/app/views/admin/lobby.scala.html
@@ -2,28 +2,33 @@
 
 @main("Lobby - Admin") {
 
-<h1>Lobby</h1>
+<h1 class="page-header">Lobby</h1>
 
-<div>
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>CurrentUserIds</th>
-        <th>maxUsers</th>
-        <th>TemplateContestId</th>
-    </tr>
-    @for(p <- contests) {
-    <tr>
-        <td>@p.contestId</td>
-        <td><a href="@routes.AdminController.contest(p.contestId.toString())">@p.name</a></td>
-        <td>@p.currentUserIds</td>
-        <td>@p.maxUsers</td>
-        <td><a href="@routes.AdminController.templateContest(p.templateContestId.toString())">
-            @templateMap(p.templateContestId).name (@p.templateContestId)</a></td>
-    </tr>
-    }
-</table>
+<h2 class="sub-header"></h2>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>CurrentUserIds</th>
+            <th>maxUsers</th>
+            <th>TemplateContestId</th>
+        </tr>
+        </thead>
+        <tbody>
+        @for(p <- contests) {
+        <tr>
+            <td>@p.contestId</td>
+            <td><a href="@routes.AdminController.contest(p.contestId.toString())">@p.name</a></td>
+            <td>@p.currentUserIds</td>
+            <td>@p.maxUsers</td>
+            <td><a href="@routes.AdminController.templateContest(p.templateContestId.toString())">
+                @templateMap(p.templateContestId).name (@p.templateContestId)</a></td>
+        </tr>
+        }
+        </tbody>
+    </table>
 </div>
 
 <div><a href='@routes.AdminController.dashBoard'>Back to Dashboard</a></div>
