--- a/app/views/admin/user_list.scala.html
+++ b/app/views/admin/user_list.scala.html
@@ -2,10 +2,12 @@
 
 @main("Users - Admin") {
 
-<h1>Users</h1>
+<h1 class="page-header">Users</h1>
 
-<div>
-    <table>
+<h2 class="sub-header"></h2>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
         <tr>
             <th>Id</th>
             <th>FirstName</th>
@@ -14,6 +16,8 @@
             <th>Email</th>
             <!--th>Password</th-->
         </tr>
+        </thead>
+        <tbody>
         @for(p <- users) {
         <tr>
             <td>@p._id</td>
@@ -24,6 +28,7 @@
             <!--td>@p.password</td-->
         </tr>
         }
+        </tbody>
     </table>
 </div>
 
