Admin: Dashboard: ResetDB / ResetContests

--- a/app/views/admin/dashboard.scala.html
+++ b/app/views/admin/dashboard.scala.html
@@ -4,6 +4,14 @@
 
 <h1 class="page-header">Dashboard</h1>
 
+<div class="tab-content">
+<p class="bg-primary tab-pane fade in active">@message</p>
+</div>
+
+<a href="@routes.AdminController.resetDB"><button class="btn btn-danger">Reset DB</button></a>
+<a href="@routes.AdminController.resetContests"><button class="btn btn-danger">Reset Contests</button></a>
+
+
 <!--
 <div class="row placeholders">
     <div class="col-xs-6 col-sm-3 placeholder">
