--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -13,9 +13,8 @@
     <title>@title</title>
 
     <!-- Bootstrap core CSS -->
-    <!--link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"-->
-    <link href="/bootstrap-3.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/bootstrap-3.1.1/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <!-- link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet" -->
