Admin: Opta Players + Opta Teams

--- a/app/views/admin/user_list.scala.html
+++ b/app/views/admin/user_list.scala.html
@@ -4,6 +4,8 @@
 
 <h1 class="page-header">Users</h1>
 
+<a href="@routes.AdminController.dashBoard"><button class="btn btn-success">Add User</button></a>
+
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
     <table class="table table-striped">
