--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -45,7 +45,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/admin">Dashboard</a></li>
+                <li><a href="@routes.AdminController.dashBoard">Dashboard</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Help</a></li>
@@ -61,7 +61,7 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Overview</a></li>
+                <li class="active"><a href="@routes.AdminController.dashBoard">Overview</a></li>
                 <!--li><a href="#">Reports</a></li>
                 <li><a href="#">Analytics</a></li>
                 <li><a href="#">Export</a></li-->
@@ -77,6 +77,10 @@
                 <li><a href="@routes.AdminController.templateMatchEvents">Template Match Events</a></li>
                 <li><a href="@routes.AdminController.templateSoccerTeams">Template Soccer Teams</a></li>
                 <li><a href="@routes.AdminController.templateSoccerPlayers">Template Soccer Players</a></li>
+            </ul>
+            <ul class="nav nav-sidebar">
+                <li><a href="@routes.AdminController.optaSoccerPlayers">Opta Players</a></li>
+                <li><a href="@routes.AdminController.optaSoccerTeams">Opta Teams</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
