--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -69,7 +69,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="@routes.AdminController.lobby">Lobby</a></li>
                 <li><a href="@routes.AdminController.users">Users</a></li>
-                <li><a href="@routes.AdminController.fantasyTeams">Fantasy Teams</a></li>
+                <li><a href="@routes.AdminController.contestEntries">Contest Entries</a></li>
                 <li><a href="@routes.AdminController.contests">Contests</a></li>
             </ul>
             <ul class="nav nav-sidebar">
