routes: String -> String:JSONArray

--- a/app/views/admin/contest_entry_list.scala.html
+++ b/app/views/admin/contest_entry_list.scala.html
@@ -1,6 +1,6 @@
 @(contest_entries: List[model.ContestEntry])
 
-@main("Fantasy Teasm - Admin") {
+@main("Contest Entry - Admin") {
 
 <h1 class="page-header">Contest Entries</h1>
 
