--- a/app/views/admin/template_soccer_player_list.scala.html
+++ b/app/views/admin/template_soccer_player_list.scala.html
@@ -10,6 +10,7 @@
         <thead>
         <tr>
             <th>Id</th>
+            <th>OptaId</th>
             <th>Name</th>
             <th>Field Pos</th>
             <th>Salary</th>
@@ -21,6 +22,7 @@
         @for(p <- soccers) {
         <tr>
             <td>@p.templateSoccerPlayerId</td>
+            <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
