Admin: Create Contest Entry

--- a/app/views/admin/contest_entry_list.scala.html
+++ b/app/views/admin/contest_entry_list.scala.html
@@ -4,6 +4,8 @@
 
 <h1 class="page-header">Contest Entries</h1>
 
+<a href="@routes.AdminController.createContestEntry"><button class="btn btn-success">Create Contest Entry</button></a>
+
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
     <table class="table table-striped">
