--- a/app/views/admin/contest_list.scala.html
+++ b/app/views/admin/contest_list.scala.html
@@ -4,6 +4,8 @@
 
 <h1 class="page-header">Contests</h1>
 
+<a href="@routes.AdminController.instantiateContests"><button class="btn btn-success">Instantiate</button></a>
+
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
     <table class="table table-striped">
