--- a/app/views/admin/template_match_event_list.scala.html
+++ b/app/views/admin/template_match_event_list.scala.html
@@ -4,6 +4,8 @@
 
 <h1 class="page-header">Template Match Events</h1>
 
+<a href="@routes.AdminController.generateTemplateMatchEvent"><button class="btn btn-success">Generate MatchEvent</button></a>
+
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
     <table class="table table-striped">
