Admin: view Opta Match Events

--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -82,6 +82,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="@routes.AdminController.optaSoccerPlayers">Opta Players</a></li>
                 <li><a href="@routes.AdminController.optaSoccerTeams">Opta Teams</a></li>
+                <li><a href="@routes.AdminController.optaMatchEvents">Opta Match Events</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
