--- a/app/views/admin/contest_entry_list.scala.html
+++ b/app/views/admin/contest_entry_list.scala.html
@@ -8,7 +8,7 @@
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="table_id" class="table table-striped">
         <thead>
         <tr>
             <th>Id</th>
