Admin: Points Translation

--- a/app/views/admin/contest_entry_add.scala.html
+++ b/app/views/admin/contest_entry_add.scala.html
@@ -88,7 +88,7 @@
             <label class="control-label" for="ok"></label>
             <div class="controls">
                 <button id="ok" name="ok" class="btn btn-success">Create</button>
-                <button id="cancel" name="cancel" class="btn btn-danger">Cancel</button>
+                <a href="@routes.AdminController.contestEntries" class="btn btn-danger">Cancel</a>
             </div>
         </div>
 
