--- a/app/views/admin/template_match_event_list.scala.html
+++ b/app/views/admin/template_match_event_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Template Match Events</h1>
 
-<a href="@routes.AdminController.generateTemplateMatchEvent"><button class="btn btn-success">Generate MatchEvent</button></a>
+<a href="@routes.AdminController.createTemplateMatchEvent"><button class="btn btn-success">Create MatchEvent</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
