--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -84,6 +84,7 @@
                 <li><a href="@routes.AdminController.lobby">Lobby</a></li>
                 <li><a href="@routes.AdminController.users">Users</a></li>
                 <li><a href="@routes.AdminController.liveMatchEvents">Live Match Events</a></li>
+                <li><a href="@routes.AdminController.pointsTranslations">Points Translations</a></li>
                 <li><a href="@routes.AdminController.contestEntries">Contest Entries</a></li>
                 <li><a href="@routes.AdminController.contests">Contests</a></li>
             </ul>
