--- a/app/views/admin/template_contest_list.scala.html
+++ b/app/views/admin/template_contest_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Template Contests</h1>
 
-<a href="@routes.AdminController.generateTemplateContest"><button class="btn btn-success">Generate Contest</button></a>
+<a href="@routes.AdminController.createTemplateContest"><button class="btn btn-success">Create Contest</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
