--- a/app/views/admin/opta_match_event_list.scala.html
+++ b/app/views/admin/opta_match_event_list.scala.html
@@ -31,9 +31,9 @@
             <td>@p.seasonName</td>
             <td>@p.homeTeamId</td>
             <td>@p.awayTeamId</td>
-            <td>@p.matchDate</td>
+            <td>@p.matchDate.format("yyyy/MM/dd hh:mm:ss")</td>
             <td>@p.timeZone</td>
-            <td>@p.lastModified</td>
+            <td>@p.lastModified.format("yyyy/MM/dd hh:mm:ss")</td>
         </tr>
         }
         </tbody>
