--- a/app/views/admin/template_contest_list.scala.html
+++ b/app/views/admin/template_contest_list.scala.html
@@ -38,7 +38,7 @@
             <td>@p.salaryCap</td>
             <td>@p.entryFee</td>
             <td>@p.prizeType</td>
-            <td>@p.startDate</td>
+            <td>@p.startDate.format("yyyy/MM/dd hh:mm:ss")</td>
         </tr>
         }
         </tbody>
