--- a/app/views/admin/template_match_event_list.scala.html
+++ b/app/views/admin/template_match_event_list.scala.html
@@ -12,6 +12,7 @@
         <thead>
         <tr>
             <th>Id</th>
+            <th>OptaId</thd>
             <th>Teams</th>
             <th>Start Date</th>
         </tr>
@@ -20,6 +21,7 @@
         @for(p <- match_events) {
         <tr>
             <td>@p.templateMatchEventId</td>
+            <td>@p.optaMatchEventId</td>
             <td>
                 <a href="@routes.AdminController.templateMatchEvent(p.templateMatchEventId.toString())">
                     @p.soccerTeamA.name vS @p.soccerTeamB.name</a></td>
