Arreglando las admin/views

--- a/admin/app/views/contest.scala.html
+++ b/admin/app/views/contest.scala.html
@@ -7,6 +7,6 @@
 <p>@map(0)</p>
 <p>@map(1)</p>
 
-<a href='@routes.AdminController.contests'>Back to Contests</a>
+<a href='@admin.routes.AdminController.contests'>Back to Contests</a>
 
 }
