--- a/admin/app/views/contest_entry_list.scala.html
+++ b/admin/app/views/contest_entry_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Contest Entries</h1>
 
-<a href="@routes.AdminController.addContestEntry"><button class="btn btn-success">Add Contest Entry</button></a>
+<a href="@admin.routes.AdminController.addContestEntry"><button class="btn btn-success">Add Contest Entry</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
@@ -42,6 +42,6 @@
     </table>
 </div>
 
-<a href='@routes.AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@admin.routes.AdminController.dashBoard'>Back to Dashboard</a>
 
 }
