--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Contests</h1>
 
-<a href="@routes.AdminController.instantiateContests"><button class="btn btn-success">Instantiate</button></a>
+<a href="@admin.routes.AdminController.instantiateContests"><button class="btn btn-success">Instantiate</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
@@ -22,16 +22,16 @@
         @for(p <- contests) {
         <tr>
             <td>@p.contestId</td>
-            <td><a href="@routes.AdminController.contest(p.contestId.toString())">@p.name</a></td>
+            <td><a href="@admin.routes.AdminController.contest(p.contestId.toString())">@p.name</a></td>
             <td>@p.currentUserIds</td>
             <td>@p.maxUsers</td>
-            <td><a href="@routes.AdminController.templateContest(p.templateContestId.toString())">@p.templateContestId</a></td>
+            <td><a href="@admin.routes.AdminController.templateContest(p.templateContestId.toString())">@p.templateContestId</a></td>
         </tr>
         }
         </tbody>
     </table>
 </div>
 
-<a href='@routes.AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@admin.routes.AdminController.dashBoard'>Back to Dashboard</a>
 
 }
