--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Contests</h1>
 
-<a href="@routes.AdminController.createPointsTranslation"><button class="btn btn-success">Create Points Translation</button></a>
+<a href="@admin.routes.AdminController.createPointsTranslation"><button class="btn btn-success">Create Points Translation</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
@@ -30,6 +30,6 @@
     </table>
 </div>
 
-<a href='@routes.AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@admin.routes.AdminController.dashBoard'>Back to Dashboard</a>
 
 }
