--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -4,7 +4,7 @@
 
 <h1 class="page-header">Template Contests</h1>
 
-<a href="@routes.AdminController.createTemplateContest"><button class="btn btn-success">Create Contest</button></a>
+<a href="@admin.routes.AdminController.createTemplateContest"><button class="btn btn-success">Create Contest</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
@@ -45,6 +45,6 @@
     </table>
 </div>
 
-<a href='@routes.AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@admin.routes.AdminController.dashBoard'>Back to Dashboard</a>
 
 }
