--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -31,6 +31,6 @@
     </table>
 </div>
 
-<a href='@routes.AdminController.templateSoccerTeams'>Back to Template Soccer Teams</a>
+<a href='@admin.routes.AdminController.templateSoccerTeams'>Back to Template Soccer Teams</a>
 
 }
