--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -1,26 +1,26 @@
-@(message: model.FlashMessage)
+@(message: controllers.admin.FlashMessage)
 
-@implicitFlashMessage = @{ message }
+@implicitFlashMessage = @{message}
 
 @main("DailySoccer - Admin") {
 
 <h1 class="page-header">Dashboard</h1>
 
 <div>
-    <a href="@routes.AdminController.resetDB"><button class="btn btn-danger">Reset DB</button></a>
-    <a href="@routes.AdminController.createMockDataDB"><button class="btn btn-danger">Reset DB with Mock Data</button></a>
+    <a href="@admin.routes.AdminController.resetDB"><button class="btn btn-danger">Reset DB</button></a>
+    <a href="@admin.routes.AdminController.createMockDataDB"><button class="btn btn-danger">Reset DB with Mock Data</button></a>
 </div>
 <br/>
 <br/>
 <div>
-    <a href="@routes.AdminController.resetContests"><button class="btn btn-danger">Reset Contests</button></a>
-    <a href="@routes.AdminController.createMockDataContests"><button class="btn btn-danger">Reset Contests with Mock data</button></a>
+    <a href="@admin.routes.AdminController.resetContests"><button class="btn btn-danger">Reset Contests</button></a>
+    <a href="@admin.routes.AdminController.createMockDataContests"><button class="btn btn-danger">Reset Contests with Mock data</button></a>
 </div>
 <br/>
 <br/>
 <div>
-    <a href="@routes.AdminController.importTeamsAndSoccers"><button class="btn btn-warning">Import Teams & Soccers</button></a>
-    <a href="@routes.AdminController.importMatchEvents"><button class="btn btn-warning">Import MatchEvents</button></a>
+    <a href="@admin.routes.AdminController.importTeamsAndSoccers"><button class="btn btn-warning">Import Teams & Soccers</button></a>
+    <a href="@admin.routes.AdminController.importMatchEvents"><button class="btn btn-warning">Import MatchEvents</button></a>
 </div>
 
 <!--
